[package]
name = "multithread-rs"
version = "0.1.0"
authors = ["Guillaume Dallenne <dallenneguillaume@gmail.com>"]
edition = "2018"
default-run = "multithread-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
version = "0.7"
features = ["small_rng"]

[profile.release]
debug = true